# patchwork-security-lab

./: .aisecignore  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  Makefile  PRODUCT.md  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/dashboard/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
apps/dashboard/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  styles.css  types.ts
apps/dashboard/src/test/: setup.ts
docs/: USER_GUIDE.md  architecture.md  benchmark-methodology.md  threat-model.md
docs/aisec/: README.md
docs/freshpatch/: README.md  SCHEMA.md  qualification.schema.json  result.schema.json  task.schema.json
docs/signallab/: README.md
examples/aisec/: mocked_url_scan.py  scan_local.py
examples/freshpatch/: bootstrap_sample.py  reference.patch  sample_task.json
examples/freshpatch/sample_seed/: calculator.py  test_calculator.py
scripts/: build_dashboard.py  clean.py
src/aisec/: __init__.py  cli.py  models.py  reports.py  rules.py  source.py  suppressions.py  urlscan.py
src/freshpatch/: __init__.py  __main__.py  builder.py  cli.py  errors.py  evaluator.py  git.py  qualification.py  reporting.py  schema.py
src/patchwork_api/: __init__.py  __main__.py  app.py
src/patchwork_api/dashboard/: index.html
src/patchwork_api/dashboard/assets/: index-DCaVIt7h.css  index-DHYkxOPr.css  index-SfTcY_tZ.js  index-SfTcY_tZ.js.map  index-w5e0s36q.js  index-w5e0s36q.js.map
src/patchwork_common/: __init__.py
src/signallab/: __init__.py  __main__.py  artifact.py  cli.py  data.py  errors.py  features.py  models.py  research.py  synthetic.py  training.py
tests/: test_release_identity.py
tests/aisec/: test_reports_cli.py  test_source.py  test_urlscan.py
tests/api/: test_app.py  test_main.py
tests/freshpatch/: support.py  test_builder.py  test_cli.py  test_evaluator.py  test_qualification.py  test_reporting.py  test_schema.py
tests/signallab/: conftest.py  test_data_features.py  test_research_cli.py  test_training_artifact.py
